Fix modify display: flex filtres__bouton tablet
j'ai change la mise en page display: inline-block par flex pour que la gestion
des 4 boutons dans leur conteneur soit plus simple. je pourrais empecher
le retour a la ligne et gerer les espaces entre les boutons plus
facilement

--- a/css/sections/recherches-and-filtres.css
+++ b/css/sections/recherches-and-filtres.css
@@ -185,6 +185,9 @@
     margin-bottom: 35px;
   }
 
+  .filtres__boutons {
+    display: flex;
+  }
 }
 
 
